start vereenvoudiging van de architectuur